--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
               <div class="people-windows">
                 <h3 class="people">Daniel Wilson</h3>
               <p class="people-work">UI Designer</p>
-              <ul class="social-list list">
-                <li class="social-list-item">
+              <ul class="social-list list header">
+                <li class="social-list-item ">
                   <a href="" class="social-list-link">
                     <svg class="social-list-icon" aria-label="instagram-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
