--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <section class="piople-list">
         <div class="container">
           <h2 class="types-gen-title">Our Team</h2>
-          <ul class="team list teim-employees header">
+          <ul class="team list teim-employees">
             <li class="team-list">
               <img class="people-img" src="./images/markguerrero.jpg" alt="markg" width="264" height="260" />
               <div class="people-windows">
